week one exercise

--- a/Week1/week1.ipynb
+++ b/Week1/week1.ipynb
@@ -12,7 +12,16 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Differences between AI, ML, deep learning, and data science."
+    "### INTRODUCTION TO MACHINE LEARNING"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Differences between AI, ML, deep learning, and data science."
    ],
    "metadata": {
     "collapsed": false
