--- a/week3/visualization-distribution.ipynb
+++ b/week3/visualization-distribution.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Assigment"
+    "# Assigment visualization distribution"
    ],
    "metadata": {
     "collapsed": false
