week three assignment

--- a/week3/visualization-relationship.ipynb
+++ b/week3/visualization-relationship.ipynb
@@ -311,7 +311,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create a dual line plot (this solution is suggested by Kedar Ghule: https://kedar.hashnode.dev/how-to-combine-two-line-charts-in-seaborn-and-python)"
+    "Create a dual line plot"
    ]
   },
   {
